# dopaas-ucm-client-c

./: CMakeLists.txt  scm_client.c  scm_client.h  test.c
